# Recover-Snapchat-Account-AI

./: CMakeLists.txt  Makefile  README.md  build.bat  build.sh
src/: csrf_manager.c  csrf_manager.h  logging.c  logging.h  main.c  monitoring.c  monitoring.h  password_generator.c  password_generator.h  proxy_manager.c  proxy_manager.h  request_manager.c  request_manager.h  security_tester.c  security_tester.h  tor_manager.c  tor_manager.h
